--- a/templates/base.html
+++ b/templates/base.html
@@ -247,7 +247,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('alerts') }}">
+                            <a class="nav-link" href="{{ url_for('dashboard') }}">
                                 <i class="bi bi-exclamation-triangle"></i> Alerts
                             </a>
                         </li>
@@ -304,4 +304,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     {% block extra_js %}{% endblock %}
 </body>
+
 </html>
