--- a/templates/base.html
+++ b/templates/base.html
@@ -247,7 +247,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('dashboard') }}">
+                            <a class="nav-link" href="{{ url_for('alerts') }}">
                                 <i class="bi bi-exclamation-triangle"></i> Alerts
                             </a>
                         </li>
@@ -306,3 +306,4 @@
 </body>
 
 </html>
+
